--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
+<% @projects.each do |p| %>
+<div>
+<p><%= p.title %></p>
+<p><%= p.description %></p>
+<p><%= p.body %></p>
+</div>
+<% end %>
