--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Graphic Design", projects_path(:category => "graphic") %>
 <%= link_to "Industrial Design", projects_path(:category => "industrial") %>
 
-
+<h1><%=t ".page-name" %></h1>
 
 <% @projects.each do |p| %>
 <div>
