--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,17 @@
   </head>
 
   <body>
-    <%= yield %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <p><%= link_to_unless_current 'en' , locale: 'en' %> |
-    <%= link_to_unless_current 'fr' , locale: 'fr' %> </p>
+    <nav>
+      <%= link_to "Graphic Design", projects_path(:category => "graphic") %>
+      <%= link_to "Industrial Design", projects_path(:category => "industrial") %>
+      <p><%= link_to_unless_current 'en' , locale: 'en' %> |
+      <%= link_to_unless_current 'fr' , locale: 'fr' %> </p>
+      <%= link_to t('about') , about_path %>  <%= link_to "Contact" , contact_path %>
+    </nav>
+      <%= yield %>
 
   </body>
 </html>
