--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,20 +1,10 @@
-<%= link_to "Graphic Design", projects_path(:category => "graphic") %>
-<%= link_to "Industrial Design", projects_path(:category => "industrial") %>
+
 
 <h1><%=t ".page-name" %></h1>
 
 <% @projects.each do |p| %>
 <div>
-<p><%= link_to project_path(p) do %>
+<p><%= link_to project_path(p) do %></p>
 <%= p.title %>
 <%end%>
-
-</p>
-
-<% if current_admin%>
-<%= link_to 'Edit', edit_project_path(p) %>
-<%= link_to 'Destroy', project_path(p),method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
-</div>
-<% end %>
-<%= render "admin" %>
+<%end%>
