--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, @project.title) %>
+
 <h1><%= @project.title%></h1>
 <h3><%= @project.category %></h3>
 <h2><%= @project.body%></h2>
