--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.heterodox{  background-color: grey;
+#heterodox-logo{
+  path{fill: #DA4567;
+    &:hover {fill:#ffffff}
+  }
+}
+}
