--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,4 +12,6 @@
 
 <div class="heterodox">
   <%= inline_svg "heterodox.svg" , id: 'heterodox-logo' %>
+  <p><%= t ".heterodox" %></p>
+  <p><%=link_to t('.heterodox-link') , 'http://www.heterodox.design' , target: "_blank" %></p>
 </div>
