--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,19 @@
   </head>
 
   <body>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <nav>
+    <div class="navigation">
+      <%= link_to "All", projects_path %>
       <%= link_to "Graphic Design", projects_path(:category => "graphic") %>
       <%= link_to "Industrial Design", projects_path(:category => "industrial") %>
-      <p><%= link_to_unless_current 'en' , locale: 'en' %> |
-      <%= link_to_unless_current 'fr' , locale: 'fr' %> </p>
+    <%= link_to_unless_current 'en' , locale: 'en' %> | <%= link_to_unless_current 'fr' , locale: 'fr' %>
       <%= link_to t('about') , about_path %>  <%= link_to "Contact" , contact_path %>
-    </nav>
+</div>
+<div class="main-container">
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
       <%= yield %>
+      </div>
 
   </body>
 </html>
