--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -31,7 +31,7 @@
       </p>
 
       <p>    <%= form.label :category %><br>
-        <%=form.select :category , ['Graphic Design' , 'Industrial Design' ] %></p>
+        <%=form.select :category , ['graphic' , 'industrial'] %></p>
           <p>
             <p>    <%= form.label :subcategory %><br>
               <%= form.text_area :subcategory %></p>
