--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,5 +55,5 @@ body{
   justify-self: end;
 }
 
-.nav-inner{position: absolute; display: none; padding-left: 10px; padding-right: 10px}
+.nav-inner{position: absolute; display: none;}
 .projects-nav{padding: 5px; cursor: pointer;}
