--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
       <span id="project-span">Projects</span>
     <div class="nav-inner">
 
-        <p> <%= link_to "All", projects_path %></p>
-        <p><%= link_to "Graphic Design", projects_path(:category => "graphic") %></p>
-        <p> <%= link_to "Industrial Design", projects_path(:category => "industrial") %></p>  </div>
+        <p> <%= link_to t('all-projects'), projects_path %></p>
+        <p><%= link_to t('graphic-design'), projects_path(:category => "graphic") %></p>
+        <p> <%= link_to t('industrial-design'), projects_path(:category => "industrial") %></p>  </div>
 
 </div>
 
