--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -40,6 +40,10 @@
     <%= form.file_field :images, multiple: true %></p>
       <p>
 
+        <p>    <%= form.label :thumbnails %><br>
+          <%= form.file_field :thumbnails, multiple: true %></p>
+            <p>
+
 
         <%= form.submit %>
       </p>
