Add new project css

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -18,16 +18,16 @@
 
       <p>
         <%= form.label :title %><br>
-        <%= form.text_area :title ,size: "60x1"%>
+        <%= form.text_area :title ,size: "30x1"%>
       </p>
       <p>
       <%= form.label :description %><br>
-      <%= form.text_area :description, size: "60x15" %>
+      <%= form.text_area :description, size: "30x15" %>
     </p>
 
       <p>
         <%= form.label :body %><br>
-        <%= form.text_area :body , size: "30x30" %>
+        <%= form.text_area :body , size: "10x10" %>
       </p>
 
       <p>    <%= form.label :category %><br>
@@ -40,9 +40,14 @@
     <%= form.file_field :images, multiple: true %></p>
       <p>
 
-        <p>    <%= form.label :thumbnails %><br>
-          <%= form.file_field :thumbnails, multiple: true %></p>
-            <p>
+        <p>  <%= form.label :thumbnails %><br>
+          <%= form.file_field :thumbnails, multiple: true %>
+        </p>
+        <p>  <%= form.label :nouveau %><br>
+          <%= form.check_box :nouveau%>
+        </p>
+
+
 
 
         <%= form.submit %>
