--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,12 +25,13 @@
 
 
 <% @projects.each do |p| %>
-
  <script type="text/javascript">
 $('.<%=p.title.parameterize %>').hover(function(){
 $('#<%=p.title.parameterize%>-thumb').fadeIn()});
 $('.<%=p.title.parameterize %>').mouseleave(function(){
 $('#<%=p.title.parameterize%>-thumb').fadeOut()});
- </script>
-
- <%end %>
+<% if p.nouveau? %>
+$('.<%=p.title.parameterize %>').addClass('new-project')
+<%end%>
+</script>
+<%end %>
