--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -12,18 +12,32 @@
   </head>
 
   <body>
-    <h1>Phone</h1>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <nav>
-      <%= link_to "Graphic Design", projects_path(:category => "graphic") %>
-      <%= link_to "Industrial Design", projects_path(:category => "industrial") %>
-      <p><%= link_to_unless_current 'en' , locale: 'en' %> |
-      <%= link_to_unless_current 'fr' , locale: 'fr' %> </p>
-      <%= link_to t('about') , about_path %>  <%= link_to "Contact" , contact_path %>
-    </nav>
-      <%= yield %>
 
+    <div class="navigation-mobile">
+      <div class="logo">Le LOGO</div>
+      <div></div>
+      <div class="links-nav-mobile">
+      <div class="projects-nav">
+      <span id="project-span">Projects</span>
+        <div class="nav-inner">
+        <p> <%= link_to t('all-projects'), projects_path %></p>
+        <p><%= link_to t('graphic-design'), projects_path(:category => "graphic") %></p>
+        <p> <%= link_to t('industrial-design'), projects_path(:category => "industrial") %></p>  </div>
+        </div>
+      <div class="static">
+        <%= link_to t('about') , about_path %></div>
+      <div>  <%= link_to "Contact" , contact_path %></div>
+      <div class="languages"><%= link_to_unless_current 'EN' , locale: 'en' %> | <%= link_to_unless_current 'FR' , locale: 'fr' %></div>
+    </div>
+
+</div>
+
+
+<div class="main-container-mobile">
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+<%= yield %>
+      </div>
   </body>
 </html>
