--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+ @import 'variables';
+
+
 html{height: 100%;}
 body{
   margin: 0;
@@ -47,13 +50,22 @@ body{
 
 
 .links-nav{
+  font-family: 'Syne';
+  text-transform: uppercase;
+  font-size: .9em;
   display:grid;
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
   justify-items: end;
   width: 70%;
   justify-self: end;
+  color: darkblue;
+  a{text-decoration: none; color: darkblue}
 }
 
 .nav-inner{position: absolute; display: none;}
 .projects-nav{padding: 5px; cursor: pointer;}
+
+p{
+  font-family: 'Untitled Sans'
+}
