--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'variables';
+
+
 #heterodox-logo{
   width: 15%;
   &:hover {path{fill:#2C2C2C}}
@@ -8,4 +12,23 @@
 
 .new-project{
   background-color: red;
+}
+
+
+
+
+.project-info{a{text-decoration: none}display: inline-grid; grid-template-columns: 1fr 1fr; align-items: center;}
+
+.project-title{
+font-family: 'Soyuz-Custom';
+text-decoration: none;
+font-size: 1.5em;
+color: darkblue;
+margin: 10px auto;
+}
+.subcat{margin-left: 30px; font-family: 'Untitled Sans'; font-size: 1em}
+hr{
+  color: darkblue;
+  margin-top:0px;
+
 }
