--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -5,8 +5,7 @@
 
   @font-face  {
     font-family: 'Soyuz-Custom';
-    src:
-         url('Soyuz-Grotesk-Bold.otf');  /* Saf3—5, Chrome4+, FF3.5, Opera 10+ */
+    src:font-url('Soyuz-Grotesk-Bold.otf'); 
   }
   @font-face {
       font-family: 'Untitled Sans';
