--- a/app/assets/stylesheets/thumbs-gallery.scss
+++ b/app/assets/stylesheets/thumbs-gallery.scss
@@ -16,7 +16,7 @@ img{width: 400px}
   left:600px;
 }
 
-#les-merveilles-de-la-mer-thumb{
+#les-merveilles-thumb{
   position: absolute;
   top:300px;
   left:200px;
