--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -5,7 +5,7 @@
 
   @font-face  {
     font-family: 'Soyuz-Custom';
-    src:font-url('Soyuz-Grotesk-Bold.otf');
+    src:font-url('SoyuzGrotesk-Custom.ttf');
   }
   @font-face {
       font-family: 'Untitled Sans';
