--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -12,4 +12,5 @@
       src:font-url('UntitledSansWeb.ttf');}
 
   $main-color: #101D6B;
-  $hx-black: #3D0C02;
+  $sec-color: #535353;
+  $hx-black: #535353;
