--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Labaki | <%= yield(:title) %> </title>
+    <title>Labaki | <%= yield(:title).titleize %> </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
