--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 
 html{height: 100%;}
 body{margin: 0;padding: 0;}
-p{font-family: 'Untitled Sans'}
+p{font-family: 'Untitled Sans', sans-serif; color: $sec-color;}
 
 .main-container{
   width: 1200px;
@@ -34,7 +34,8 @@ p{font-family: 'Untitled Sans'}
     left: -1px;
     top:0px;
     padding-bottom: 20px;
-    margin-top: 60px;
+    //margin-top: 60px;
+    padding-top: 60px;
     position: sticky;
     display: inline;
   //  border-bottom: 1px solid red;
@@ -48,7 +49,7 @@ p{font-family: 'Untitled Sans'}
 
 
 .links-nav{
-  font-family: 'Untitled Sans';
+  font-family: 'Untitled Sans', sans-serif;
   text-transform: uppercase;
   font-size: .9em;
   display:grid;
@@ -67,3 +68,5 @@ p{font-family: 'Untitled Sans'}
 .nav-inner{position: absolute; display: none; background-color: white;
 p{padding-bottom: 5px; border-bottom: 1px dotted $main-color; }}
 .projects-nav{padding: 5px; cursor: pointer;}
+
+///////scrollTop
