--- a/app/views/backend/cms.html.erb
+++ b/app/views/backend/cms.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'cms') %>
+<% provide(:title, 'CMS') %>
 
 <table>
   <tr>
@@ -15,5 +15,5 @@
  </tr>
  <% end %>
 </table>
-
-  <%= link_to('Logout', destroy_admin_session_path, method: :delete) %>        
+<%= link_to('Create', new_project_path) %>
+<%= link_to('Logout', destroy_admin_session_path, method: :delete) %>
