--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <div></div>
       <div class="links-nav">
         <div class="projects-nav">
-          <span id="project-span"><%= link_to t('the-projects'), projects_path , onclick: 'return:false' %></span>
+          <span id="project-span"><%= link_to t('the-projects'), projects_path , onclick: 'return false' %></span>
           <div class="nav-inner">
               <p> <%= link_to t('all-projects'), projects_path %></p>
               <p><%= link_to t('graphic-design'), projects_path(:category => "graphic") %></p>
