--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -83,3 +83,8 @@ hr{ color: $main-color; margin-top:0px;}
 color: $new-project;
 a{color: $new-project;}
 }
+
+
+.in-project-nav{
+  margin: 60px 0px;
+}
