--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 
 
 html{height: 100%;}
-body{margin: 0;padding: 0;}
+body{margin: 0;padding: 0; scroll-behavior: smooth;}
 p{font-family: 'Untitled Sans', sans-serif; color: $sec-color;}
 
 .main-container{
