--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,25 +1,31 @@
 <% provide(:title, @project.title) %>
 
-<div id="top"></div>
-<% @project.thumbnails.each do |p| %>
-<div class="show-project-thumb"> <%= image_tag p.url %></div>
-<%end%>
+<div class="show-project">
 
-<p class="show-project-title"><%= @project.title%></p>
-<p><%= @project.subcategory %></p>
-<p class="show-project-body"><%= @project.body.html_safe%></p>
-<div class="image-block">
+<div class="project-texts">
+  <p class="show-project-title"><%= @project.title%></p>
+  <p><%= @project.subcategory %></p>
+  <p class="show-project-body"><%= @project.body.html_safe%></p>
+</div>
+
+
+<div class="images-block">
 <% @project.images.each do |i| %>
 <div><%= image_tag (i.url)%></div>
 <% end %>
 </div>
- <div onclick="topFunction()" id="myBtn" title="Top" class="up-top"><div class="up-arrow"><%= inline_svg 'up-arrow.svg'%></div>  </div>
+
 
 <div class="in-project-nav">
  <% if @project.previous%>
-     <%= link_to @project.previous do %><div class="prev-project-name">Previous : <%= @project.previous.title%></div><% end %>
+ <%= link_to @project.previous do %><div class="prev-project-name">Previous : <%= @project.previous.title%></div><% end %>
  <% else %><div></div> <%end%>
+ <span><%= link_to t('the-projects'), projects_path %></span>
  <% if @project.next%>
      <%= link_to @project.next do %><div class="prev-project-name">Next : <%= @project.next.title%></div><% end %>
  <% else %><div></div> <%end%>
 </div>
+
+</div><!-- Show Project -->
+
+<div onclick="topFunction()" id="myBtn" title="Top" class="up-top"><div class="up-arrow"><%= inline_svg 'up-arrow.svg'%></div>  </div>
