--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -7,7 +7,8 @@
 
 
 
-.single-project{display: inline-flex;align-items: center;}
+.single-project{display: inline-flex;align-items: center;border-bottom: 1px dotted $main-color; width: 100%;
+}
 
 
 .project-title{
@@ -18,6 +19,7 @@ font-size: 4em;
 margin: 8px auto;
 a{color: $main-color; text-decoration: none}
 }
+
 .subcat{margin-left: 20px; font-family: 'Untitled Sans' , sans-serif;; font-size: 1em; color: $main-color;}
 hr{ color: $main-color; margin-top:0px;}
 
@@ -101,6 +103,23 @@ display: grid;
     margin-bottom: 25px;
   }
 }
+
+.in-project-nav{
+  display: grid;
+  grid-template-columns: repeat(3 , 1fr);
+    .next-project-name{display:inline-flex; justify-content: end;}
+    #back-home{display:inline-flex;justify-content: center;};
+    a{text-decoration: none; font-family: 'Untitled Sans' , sans-serif;
+      text-transform: capitalize;
+      font-size: 1.1em;
+      color:$main-color;
+      &:hover{color: $high-light;}
+    }
+
+
+
+}
+
 
 
 //////////////// SHOW PROJECT ////
