--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,7 +7,7 @@
       <div class="subcat"><%= p.subcategory %> </div>
       <% p.thumbnails.each do |th| %><div class="thumbails-index" id= "<%=p.title.parameterize%>-thumb" ><%= image_tag (th.url)%></div><% end %>
 </div>
-<hr class="separateur">
+<!-- <hr class="separateur"> -->
 
 <%end%>
 
