--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,7 +23,7 @@
  <div><%= link_to @project.previous do %><%= @project.previous.title%></div></div><% end %>
 
 <% else %><div></div> <%end%>
- <div id="back-home"></div>
+ <div id="back-home">Home</div>
  <% if @project.next%>
 
  <div class="next-project-name">
