--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -87,6 +87,7 @@ color: $new-project;
 a{color: $new-project;}
 }
 
+#back-home{text-align: center; font-family: 'Untitled Sans' , sans-serif;}
 
 .in-project-nav{
   margin: 60px 0px;
