--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -124,3 +124,8 @@ display: grid;
 .arrow-inner-left{ padding-left: 30px;width:50px; fill:$main-color;transform: rotate(180deg);}
 
 //////////////// SHOW PROJECT ////
+
+#back-home{
+  path{
+  fill: red;
+}}
