--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -19,16 +19,16 @@
 <div class="in-project-nav">
  <% if @project.previous%>
  <div class="prev-project-name">
-   <div><%= inline_svg "arrow-inner" , class:'arrow-inner-left' %></div>
+   <div><%= inline_svg "arrow-inner.svg" , class:'arrow-inner-left' %></div>
  <div><%= link_to @project.previous do %><%= @project.previous.title%></div></div><% end %>
 
 <% else %><div></div> <%end%>
- <div id="back-home">Home<%= inline_svg "next-arrow.svg" %></div>
+ <div id="back-home">Home</div>
  <% if @project.next%>
 
  <div class="next-project-name">
     <div><%= link_to @project.next do %><%= @project.next.title%><% end %></div>
-      <div><%= inline_svg "arrow-inner" , class:'arrow-inner-right' %></div>
+      <div><%= inline_svg "arrow-inner.svg" , class:'arrow-inner-right' %></div>
     </div>
 
  <% else %><div></div> <%end%>
